# scraping-showcase

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
api/: main.py  tasks.py
api/routes/: scrape.py  search.py  static.py
api/routes/v1/: scrape.py
api/routes/v2/: scrape.py
api/schemas/: scrape.py  search.py
api/static/: swagger.json
api/static/v1/: swagger.json
api/tests/: test_routes.py  test_search.py  test_tasks.py
api/tests/utils/: test_scrape.py
api/utils/: scrape.py  swagger.py  url.py
docs/: assessment.md  index.md  setup.md  solution.md  swagger.json  swagger.md
webapp/: app.py
webapp/tools/: utilities.py
webapp/views/: asynch.py  asynch_sse.py  synch.py  utils.py
