[tool.poetry]
name = "data-theorem-assessment"
version = "0.1.0"
description = "The web application's functionality is to retrieve information about a specific Android application available on the Aptoide mobile application marketplace (https://en.aptoide.com/) and display it to the user."
authors = ["Denis Volokh <denis.volokh@gmail.com>"]
readme = "README.md"
packages = [{include = "data_theorem_assessment"}]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^21.2.0"
mkdocs = "^1.5.3"
pre-commit = "^3.5.0"
pyproject-flake8 = "^6.1.0"
mypy = "^1.7.1"
black = "^23.11.0"
isort = "^5.12.0"
requests = "^2.31.0"
marshmallow = "^3.20.1"
pytest = "^7.4.3"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
types-requests = "^2.31.0.10"
requests-mock = "^1.11.0"
celery = "^5.3.6"
redis = "^5.0.1"
falcon-apispec = "0.3.0"
streamlit = "^1.29.0"
streamlit-option-menu = "^0.3.6"
sseclient = "^0.0.27"
uvicorn = "^0.24.0.post1"
aioredis = "^2.0.1"
mkdocs-render-swagger-plugin = "^0.1.1"
httpx = "^0.25.2"
falcon = "3.1.3"
pytest-asyncio = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
multi_line_output=3
include_trailing_comma = true
force_grid_wrap=0
use_parentheses = true
line_length=88

[tool.flake8]
ignore = "E203, E266, E501, W503"
max-line-length = 88
max-complexity = 18
select = "B,C,E,F,W,T4"

[tool.mypy]
files="api/*.py, webapp/*.py"
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true